--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.github.honoluluhenk.id-class</groupId>
 	<artifactId>id-class-parent</artifactId>
 
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -34,7 +34,7 @@
 		<connection>scm:git:https://github.com/HonoluluHenk/id-class.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/HonoluluHenk/id-class.git</developerConnection>
 		<url>https://github.com/HonoluluHenk/id-class</url>
-		<tag>0.0.1</tag>
+		<tag>1.0.5</tag>
 	</scm>
 
 	<issueManagement>
