Enforce NonNull using Java8 requireNonNull

--- a/lombok.config
+++ b/lombok.config
@@ -1,6 +1,7 @@
 config.stopbubbling = true
 lombok.accessors.chain = true
 
+lombok.nonNull.exceptionType = JDK
 lombok.addNullAnnotations = checkerframework
 lombok.addLombokGeneratedAnnotation = true
 #lombok.extern.findbugs.addSuppressFBWarnings = true
