--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,7 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>3.0.0-M1</version>
 					<configuration>
+						<autoVersionSubmodules>true</autoVersionSubmodules>
 						<tagNameFormat>@{version}</tagNameFormat>
 					</configuration>
 				</plugin>
