implement jpa-hibernate integration (use existing type parsing, cleanup class names)

--- a/id-class-jpa-hibernate-integration/pom.xml
+++ b/id-class-jpa-hibernate-integration/pom.xml
@@ -15,7 +15,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.github.honoluluhenk.id-class</groupId>
-			<artifactId>id-class</artifactId>
+			<artifactId>id-class-integration-support</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
