--- a/id-class-jackson-integration/pom.xml
+++ b/id-class-jackson-integration/pom.xml
@@ -15,11 +15,6 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.github.honoluluhenk.id-class</groupId>
-			<artifactId>id-class</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.honoluluhenk.id-class</groupId>
 			<artifactId>id-class-integration-support</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -31,7 +26,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
