--- a/id-class/pom.xml
+++ b/id-class/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>id-class-parent</artifactId>
 		<groupId>com.github.honoluluhenk.id-class</groupId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.3</version>
 	</parent>
 
 	<artifactId>id-class</artifactId>
