--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.honoluluhenk.id-class</groupId>
 	<artifactId>id-class-parent</artifactId>
 
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<packaging>pom</packaging>
 
 	<!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -31,7 +29,7 @@
 		<connection>scm:git:https://github.com/HonoluluHenk/id-class.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/HonoluluHenk/id-class.git</developerConnection>
 		<url>https://github.com/HonoluluHenk/id-class</url>
-		<tag>1.0.5</tag>
+		<tag>0.0.3</tag>
 	</scm>
 
 	<issueManagement>
