--- a/id-class-jpa-hibernate-integration/pom.xml
+++ b/id-class-jpa-hibernate-integration/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>id-class-parent</artifactId>
 		<groupId>com.github.honoluluhenk.id-class</groupId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>id-class-jpa-hibernate-integration</artifactId>
